docs(website): update docs, fix textDecoration bug on anchor component

--- a/website/pages/docs/introduction.mdx
+++ b/website/pages/docs/introduction.mdx
@@ -7,15 +7,15 @@ order: 1
 
 # Introduction
 
-> It's my first time open-sourcing a serious project, and I want to increase my chances of having a positive experience. I hope this helps us communicate the right expectations on my work.
+> It's my first time open-sourcing a serious project, and I want to increase my chances of having a positive experience. I hope this helps communicate the right expectations on my work.
 
-The Camara homepage provides expanded guidance and documentation on the design language, component library and style/pattern guide. I want my users to have as much information as possible while exploring Camara.
+The Camara homepage provides expanded guidance and documentation on the design language, component library and style/pattern guide. I want users to have as much information as possible while exploring Camara.
 
-If you’re new to Camara, start with my [getting started guide](/docs/start/get-started). It has everything you need to design and develop your side projects with Camara.
+If you’re new to Camara, start with the [getting started guide](/docs/installation). It has everything you need to design and develop your side projects with Camara.
 
 ## Production Use
 
-Camara isn’t ready for production use yet, but I want to give you an early preview of what’s coming. I'd love you to give it a try. As always, I encourage feedback and contributions. I plan to get it out of beta before mid-summer in July and start accepting contributions.
+Camara isn’t ready for production use yet, but I want to give you an early preview of what’s coming. I'd love you to give it a try. As always, I encourage feedback and contributions. I plan to get it out of beta by mid-summer in July and start accepting contributions.
 
 ## Contributions
 
@@ -23,8 +23,8 @@ This project will be open for contributions at version 1.0, right now, my only g
 
 You will notice the absence of a contribution guide, and some other piece of a regular open-source project. These are things I am gearing work on and making plans to make them available as soon as I begin accepting contributions.
 
-While I could easily keep working on this in stealth and release when I am ready, I do not think this is the right decision for us at this moment. I am huge advocates of working in public and are proud to show my initial ideas while documenting my progress to where I want to go.
-Also, building in public keeps us much more accountable and helps fuel my momentum to get my ideas out. I hope you understand this and are excited as much as I look forward to Camara V1.
+While I could easily keep working on this in stealth and release when I am ready, I do not think this is the right decision for me at this moment. I am a huge advocate of working in public and I'm proud to show my initial ideas while documenting my progress to where I want to go.
+Also, building in public keeps me much more accountable and helps fuel my momentum to get my ideas out. I hope you understand this and are excited as much as I look forward to Camara V1.
 
 ## Staying informed
 
@@ -33,4 +33,4 @@ Also, building in public keeps us much more accountable and helps fuel my moment
 
 ## Something missing?
 
-If you find issues with the documentation or have suggestions on how to improve the documentation or the project in general, please file an issue for us, or send a tweet mentioning the @preshonyee Twitter account.
+If you find issues with the documentation or have suggestions on how to improve the documentation or the project in general, please file an issue, or send a tweet mentioning [Presh Onyee](https://github.com/preshonyee) on Twitter.
