--- a/website/pages/docs/roadmap.mdx
+++ b/website/pages/docs/roadmap.mdx
@@ -10,15 +10,6 @@ order: 9
 This week in Camara
 
 - [ ] Fix all current bugs
-- [ ] Write test for all components
-- [ ] Get Camara Native to components parity with Camara
-- [ ] Deploy Storybook
-- [ ] Add CI/CD support with Chromatic
-- [ ] Add templates for NextJS, CRA, Gatsby.
-- [ ] Rework the homepage to communicate clearly
-- [ ] Revise every single section of the Docs page
-- [ ] Run A11Y testing
-- [ ] Add examples to Camara React
-- [ ] Complete the Beaniegram project for Camara react
-- [ ] Complete the Beaniegram Native project for Camara Native
-- [ ] Update the Figma component library
+- [ ] Update the documentation for all components where necessary
+- [ ] Add more demo examples to each component
+- [ ] Revise changelog format
