docs(website): clean-up and reorganize docs

--- a/website/pages/docs/changelog.mdx
+++ b/website/pages/docs/changelog.mdx
@@ -1,6 +1,6 @@
 ---
 title: Changelog
-section: Getting Started
+section: Camara
 slug: /docs/changelog/
 order: 7
 ---
@@ -9,7 +9,53 @@ order: 7
 
 `Camara` strictly follows [semantic versioning](https://semver.org/)
 
-## Latest
+## June 2021 Update
+
+Here are the most significant changes in June:
+
+1. Improved docs experience
+2. Improved dark theme support
+3. Changed from styled components to stitches
+4. Improved storybook docs
+5. Deployed storybook docs
+6. Switched build system to TSDX
+
+`Anchor Component`:
+
+- Removed `asBtn` prop
+- Add `variant` prop
+- Link color now directly affects immediate children
+- Added Wikipedia example
+- Added Google Search example
+- Improve component stories
+- Update component docs
+
+`Card Component`:
+
+- Reduce default padding to `$2`
+- New prop `round` for rounded shaped cards
+- New prop `bg` to change background color of cards
+
+`Heading Component`:
+
+- Remove default margin and padding
+- Reduce margin vertical to `$2`
+
+`Text Component`:
+
+- `small` is now 14px
+- `medium` is now 16px
+- `large` is now 18px
+
+Here's our roadmap intent for July:
+
+1. Add more new components, particularly related to forms, error handling, and feedbacks.
+2. Update docs with getting started guide for React, NextJS, and more.
+3. Improve the docs for each components and add more examples
+4. Improve the layout related components
+5. Add a full-stack web app UI example
+
+---
 
 ### v1.0.0-beta.35 (Sat May 22, 2021)
 
