--- a/website/pages/docs/figma-design-lib.mdx
+++ b/website/pages/docs/figma-design-lib.mdx
@@ -1,6 +1,6 @@
 ---
 title: Figma Design Library
-section: Resources
+section: Camara
 slug: /docs/figma-design-library/
 order: 11
 ---
@@ -18,9 +18,9 @@ Link to Figma workspace [click here](https://www.figma.com/file/ZyAZ8ZT78b0AudmG
 For the Figma Community File [click here](https://www.figma.com/community/file/956877234997353958/Camara-Design-System).
 
 <iframe
-  style='border: 1px solid rgba(0, 0, 0, 0.1);'
-  width='800'
-  height='450'
-  src='https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FZyAZ8ZT78b0AudmG8o3whB%2FDesign-System-Components%3Fnode-id%3D0%253A1'
+  style="border: 1px solid rgba(0, 0, 0, 0.1);"
+  width="800"
+  height="450"
+  src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FZyAZ8ZT78b0AudmG8o3whB%2FDesign-System-Components%3Fnode-id%3D0%253A1"
   allowfullscreen
 ></iframe>
