--- a/website/pages/docs/installation.mdx
+++ b/website/pages/docs/installation.mdx
@@ -1,6 +1,6 @@
 ---
-title: Installation
-section: Getting Started
+title: Getting Started
+section: Camara
 slug: /docs/installation/
 order: 8
 ---
