--- a/website/pages/docs/changelog.mdx
+++ b/website/pages/docs/changelog.mdx
@@ -9,6 +9,44 @@ order: 7
 
 `Camara` strictly follows [semantic versioning](https://semver.org/)
 
+## August 2021
+
+- `Flex Component`:
+  - Added `alignContent, alignItems, alignSelf, wrap, direction,` props to the flex component
+- `Heading Component`
+  - Added `color` props to heading component
+  - Added `noWhiteSpace` prop to heading component
+- `Text Component`
+  - Added `color` props to text component
+  - Added `fontSize` props to text component
+- Create new component `Three-Pane-Window`
+- `BrowserWindow`
+  - Update layout in storybook full screen mode
+  - Fix layout inconsistency
+- `Avatar Component`:
+  - `Username` prop no longer uses substring to split the initials. Provide the already split initials yourself.
+- `Box`
+  - Add `width` props to box component
+  - Add proper support for `css` props to add additional properties
+  - Add spacing system props
+- Create new component `List`
+
+## July 2021
+
+- Clean-up and reorganize the documentation site
+- Rename `divider` to `separator`
+- New `Select` component
+- New `Switch` component
+- New `Accordion` component
+- Accordion component
+  - Visible at start
+  - Prefix
+  - Custom Icon
+- Select & Multi-select
+  - Add actions tab support to storybook
+  - Add support for active selected icon to be on left or right
+  - Change chevron to double chevron
+
 ## June 2021 Update
 
 Here are the most significant changes in June:
